--- a/app/src/main/res/layout/fragment_create_to_do.xml
+++ b/app/src/main/res/layout/fragment_create_to_do.xml
@@ -5,9 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/back_primary"
-    android:padding="16dp"
-    tools:context=".screen.FragmentCreateToDo">
+    tools:context=".ui.screen.CreateTaskScreen.FragmentCreateToDo">
 
+
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/composeView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</FrameLayout>
+
+<!--
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -153,3 +160,4 @@
     </androidx.core.widget.NestedScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
+-->
