--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="large_title_text">
-        <item name="fontFamily">Roboto</item>
+
+        <item name="fontFamily">@font/roboto</item>
         <item name="android:textSize">32sp</item>
         <item name="lineHeight">38sp</item>
         <item name="android:textColor">@color/label_primary</item>
@@ -9,7 +10,7 @@
     </style>
 
     <style name="title_text">
-        <item name="fontFamily">Roboto</item>
+        <item name="fontFamily">@font/roboto</item>
         <item name="android:textSize">20sp</item>
         <item name="lineHeight">32sp</item>
         <item name="android:textColor">@color/label_primary</item>
@@ -17,21 +18,21 @@
     </style>
 
     <style name="button_text">
-        <item name="fontFamily">Roboto</item>
+        <item name="fontFamily">@font/roboto</item>
         <item name="android:textSize">14sp</item>
         <item name="lineHeight">24sp</item>
         <item name="android:fontWeight">500</item>
     </style>
 
     <style name="body_text">
-        <item name="fontFamily">Roboto</item>
+        <item name="fontFamily">@font/roboto</item>
         <item name="android:textSize">16sp</item>
         <item name="lineHeight">20sp</item>
         <item name="android:fontWeight">400</item>
     </style>
 
     <style name="subhead_text">
-        <item name="fontFamily">Roboto</item>
+        <item name="fontFamily">@font/roboto</item>
         <item name="android:textSize">14sp</item>
         <item name="lineHeight">20sp</item>
         <item name="android:textColor">@color/label_tertiary</item>
