--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -23,5 +23,6 @@
         <!-- Customize your theme here. -->
         <item name="colorAccent">@color/color_blue</item>
 
+        <item name="bottomSheetDialogTheme">@style/BottomSheetDialogTheme</item>
     </style>
 </resources>
